// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Controls/> renders properly 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFF;
  border-radius: 3px;
  box-shadow: 0 4px 8px 3px rgba(0,0,0,0.2);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 68px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 26px;
  padding: 0 16px;
  -webkit-transition: all 0.6s ease;
  transition: all 0.6s ease;
  width: 300px;
}

<Controls>
  <section
    className="c0"
  />
</Controls>
`;

exports[`<Controls/> with prop: new-only shows only the new game option 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFF;
  border-radius: 3px;
  box-shadow: 0 4px 8px 3px rgba(0,0,0,0.2);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 68px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: calc(100vh - 360px);
  padding: 0 10px;
  -webkit-transition: all 0.6s ease;
  transition: all 0.6s ease;
  width: 77px;
}

<Controls
  newOnly={true}
>
  <section
    className="c0"
  />
</Controls>
`;
